2018-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm,
	* tp/Texinfo/Encoding.pm,
	* tp/Texinfo/Parser.pm,
	* tp/Texinfo/Report.pm,
	* tp/Texinfo/Structuring.pm,
	* tp/Texinfo/Transformations.pm,
	* tp/Texinfo/Convert/Converter.pm
	* tp/Texinfo/Convert/DocBook.pm,
	* tp/Texinfo/Convert/HTML.pm,
	* tp/Texinfo/Convert/IXIN.pm,
	* tp/Texinfo/Convert/NodeNameNormalization.pm,
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Convert/Texinfo.pm,
	* tp/Texinfo/Convert/TexinfoSXML.pm,
	* tp/Texinfo/Convert/TexinfoXML.pm,
	* tp/Texinfo/Convert/Text.pm,
	* tp/Texinfo/Convert/Unicode.pm:

	Remove generated content such as "Mention other useful 
	documentation" and "Items to export into callers namespace by 
	default" (presumably from h2xs).  Remove copyright and license 
	from POD section at ends of files, as the copyright statement is 
	at the beginning of each file.  Update copyright years.

2018-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (%global_multiple_commands): Remove 'author'.
	(_register_global_command): No exception for 'author'.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/sectioning/list-of-tests,
	* tp/tests/contents/list-of-tests,
	* tp/tests/indices/list-of-tests,
	* tp/tests/tex_htmlindices/list-of-tests,
	Use -c instead of --set-customization-variable, for brevity.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/indices/list-of-tests
	(split_chapter_index, index_split, index_split_nodes)
	(index_no_node, nodes_before_top, nodes_before_top_nodes)
	(nodes_before_top_no_nodes, nodes_before_top_and_sections_monolithic):
	Remove tests.

	* tp/t/95moreindices.t: Add the same tests.

	I checked test results were unchanged by running commands like:

	   T=split_chapter_index
	   (cd t/results/moreindices/$T/res_html ; for f in * ; do \
	   echo diff $f ; \
	   diff $f ../../../../../tests/indices/res_parser/$T/$f ; \
	   done )
